--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@
 body{
 	background:rgba(255,255,255,1);
 	color:rgba(25,25,25,1);
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight:300;
 }
 
